# controller/diary/deleteExerciseById.js
@@ -3,7 +3,7 @@ const { HttpError } = require("../../utils");
 
 const deleteExerciseById = async (req, res) => {
   const { _id: owner } = req.user;
-  const { id } = req.params;
+  const { diaryEntryId: id } = req.params;
 
   const foundedDiary = await DiaryExercise.findOne({
     ownerId: owner,
